Loading and promises improved.

--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -506,7 +506,9 @@
             </div>
 
 
-
+                <div id="planexp-links-loading">
+                        <img class="planexp-loading-img" src="{% static 'Images/loading-planexp.gif' %}"/>
+                </div>
                 <br><br>
                 <div id="planexp-links-table-container">
                     
