--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -430,7 +430,7 @@
 
                     <div id="counter-plot-genenotfound">
                         <span class="glyphicon glyphicon-warning-sign"></span>
-                        Gene/Symbol not found
+                        No results
                     </div>
                     <div id="counter-plot-loading">
                         <img class="planexp-loading-img" src="{% static 'Images/loading-planexp.gif' %}"/>
@@ -510,9 +510,17 @@
                         <img class="planexp-loading-img" src="{% static 'Images/loading-planexp.gif' %}"/>
                 </div>
                 <br><br>
+
+                <div id="planexp-links-error">
+                    <span class="glyphicon glyphicon-warning-sign"></span>
+                    No results
+                </div>
+
                 <div id="planexp-links-table-container">
                     
                 </div>
+
+                <br><br><br><br>
 
             </div> 
 
