--- a/NetExplorer/templates/NetExplorer/tutorial.html
+++ b/NetExplorer/templates/NetExplorer/tutorial.html
@@ -545,7 +545,9 @@
                         When choosing one level on one of the two "Select conditions to compare" dropdowns, only the levels for which there are pair-wise comparisons 
                         available will be visible on the second dropdown menu. When both condition levels have been selected, a table and a volcano plot will appear below.
                     </p>
-
+                    
+                    <img class="tutorial-img" src="{% static 'Images/tutorial/planexp-dge4.png'%}" />
+                    <br>
                      <img class="tutorial-img" src="{% static 'Images/tutorial/planexp-dge2.png'%}" />
                     <p>
                         This table will contain the differentially expressed genes between the two selected levels (in this case, "0h Head" vs "6h Head"). 
