--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="{% static 'css/jquery-ui.structure-all.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery-ui-all.theme.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/jquery-data-tables.css' %}">
         <link rel="shortcut icon" href="{% static 'Images/mini-logo.ico' %}">
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
