--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2829,3 +2829,8 @@ summary { display: list-item !important; }
     width: 700px; 
     background-color: #FDD4D4;
 }
+
+
+.tools-icon {
+    width: 50px;
+}
