--- a/NetExplorer/templates/NetExplorer/id_conversion.html
+++ b/NetExplorer/templates/NetExplorer/id_conversion.html
@@ -55,7 +55,7 @@
 
             <h2>Query</h2>
             <label for="query-textarea"></label>
-            <textarea form="conversion-form" name="query-identifiers" class="form-control" id="query-textarea" rows="6" cols="12" placeholder="Paste your identifiers here"></textarea>
+            <textarea form="conversion-form" name="query-identifiers" class="form-control" id="query-textarea" rows="6" cols="12" placeholder="Paste your identifiers here separated by commas, spaces, or newlines"></textarea>
             
             <br><br>
             <hr>
