PFAM domains in downloader now contain desc. Improved R.E. in card.

--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2874,3 +2874,7 @@ summary { display: list-item !important; }
     display: inline-block;
     width: 100%;
 }
+
+.tf-logo-container {
+    text-align: center;
+}
