--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2272,11 +2272,15 @@ kbd {
 
 .goea-plot {
     display: inline-block;
-    max-height: 500px;
+    max-height: 200px;
     width: auto;
     max-width: 100%;
     margin-top: 10px;
 
+}
+.go-stats-tbl {
+    font-size: 11;
+    width: 40% !important;
 }
 
 #plot-genenotfound { 
@@ -2835,6 +2839,10 @@ summary { display: list-item !important; }
     width: 50px;
 }
 
+.tools-icon-a {
+    padding-left: 2px !important;
+}
+
 .navbar .divider-vertical {
     height: 50px;
     margin: 0 9px;
@@ -2851,4 +2859,26 @@ summary { display: list-item !important; }
     .navbar-collapse .nav > .divider-vertical {
         display: none;
      }
+}
+
+
+#tf-table {
+    font-size: 10px;
+}
+
+.tf-logo {
+    height: 30;
+}
+
+#promoter-img-container {
+    width: 100%;
+    text-align: center;
+}
+.promoter-img {
+    display: inline-block;
+    width: 100%;
+}
+
+.tf-logo-container {
+    text-align: center;
 }
