--- a/NetExplorer/templates/NetExplorer/tutorial.html
+++ b/NetExplorer/templates/NetExplorer/tutorial.html
@@ -617,8 +617,7 @@
                     </p>
 
                     <p>
-                        Keep in mind that, if plotting many genes at the same time (> 30), not all row names will be displayed, 
-                        and you will have to use the Zoom-in function to explore the graph efectively, see <a href="#plot-controls">plot controls</a>. 
+                        <b>Keep in mind that, if plotting many genes or conditions at the same time, not all row or column names will be displayed, and you will have to use the Zoom-in function to explore the graph efectively, see <a href="#plot-controls">plot controls</a>. </b>
                     </p>
                     
                     <img class="tutorial-img" src="{% static 'Images/tutorial/planexp-gplot8.png'%}" />
