--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -36,17 +36,41 @@
         <br>
         <h2 id="publications">Publications</h2>
         <hr>
+
         <blockquote>
         <p>
-            <a href="https://academic.oup.com/bioinformatics/article/34/6/1016/4657068" target="_blank"><b>PlanNET</b>: homology-based predicted interactome for multiple planarian transcriptomes</a>
+            <a href="https://academic.oup.com/bioinformatics/advance-article-abstract/doi/10.1093/bioinformatics/btz802/5606715" target="_blank"><b>PlanExp</b>: intuitive integration of complex RNA-seq datasets with planarian omics resources</a>
             <br/>
-            S. Castillo-Lara, J.F. Abril<br />
-            <i>Bioinformatics</i>, Volume 34, Issue 6, 15 March 2018, Pages 1016–1023, <a href="https://doi.org/10.1093/bioinformatics/btx738" target="_blank">btx738</a><br />
+            S. Castillo-Lara, E. Pascual-Carreras, J.F. Abril <br />
+            <i>Bioinformatics</i>, AOP 2019, <a href="https://doi.org/10.1093/bioinformatics/btz802" target="_blank">doi:10.1093/bioinformatics/btz802</a><br/>
         </p>
         <details>
             <summary>BibTex</summary>
             <pre>
-        @article{Castillo-Lara2018,
+    @article{Castillo-Lara2019,
+        author = {Castillo-Lara, S and Pascual-Carreras, E. and Abril, J F},
+        title = {"PlanExp: intuitive integration of complex RNA-seq datasets with planarian omics resources"},
+        journal = {Bioinformatics},
+        year = {2019},
+        doi = {10.1093/bioinformatics/btz802},
+        URL = {http://dx.doi.org/10.1093/bioinformatics/btz802},
+    }
+            </pre>
+        </details>
+    </blockquote>
+
+
+        <blockquote>
+            <p>
+                <a href="https://academic.oup.com/bioinformatics/article/34/6/1016/4657068" target="_blank"><b>PlanNET</b>: homology-based predicted interactome for multiple planarian transcriptomes</a>
+                <br/>
+                S. Castillo-Lara, J.F. Abril<br />
+                <i>Bioinformatics</i>, Volume 34, Issue 6, 15 March 2018, Pages 1016–1023, <a href="https://doi.org/10.1093/bioinformatics/btx738" target="_blank">doi:10.1093/bioinformatics/btx738</a><br />
+            </p>
+            <details>
+                <summary>BibTex</summary>
+                <pre>
+    @article{Castillo-Lara2018,
         author = {Castillo-Lara, S and Abril, J F},
         title = {"PlanNET: homology-based predicted interactome for multiple planarian transcriptomes"},
         journal = {Bioinformatics},
@@ -56,11 +80,10 @@
         year = {2018},
         doi = {10.1093/bioinformatics/btx738},
         URL = {http://dx.doi.org/10.1093/bioinformatics/btx738},
-        eprint = {/oup/backfile/content_public/journal/bioinformatics/34/6/10.1093_bioinformatics_btx738/2/btx738.pdf}
-        }
-            </pre>
-        </details>
-    </blockquote>
+    }
+                </pre>
+            </details>
+        </blockquote>
 
         <br>
         <br>
