--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -66,6 +66,7 @@
                                     <li><a class="tools-icon-a" href="{% url 'blast' %}"><img class="tools-icon" src="{% static 'Images/blast-icon-small.png' %}">Blast</a></li>
                                     <li><a class="tools-icon-a" href="{% url 'path_finder' %}"><img class="tools-icon" src="{% static 'Images/pathwayfinder-icon-small.png' %}">Pathway Finder</a></li>
                                     <li><a class="tools-icon-a" href="{% url 'planexp' %}"><img class="tools-icon" src="{% static 'Images/planexp-icon-transparent.png' %}">PlanExp</a></li>
+                                    <li><a class="tools-icon-a" href="{% url 'tf_tools' %}"><img class="tools-icon" src="{% static 'Images/tf_tools.png' %}">TF Tools</a></li>
                                     <li><a class="tools-icon-a" href="{% url 'id_conversion' %}"><img class="tools-icon" src="{% static 'Images/id_converter.png' %}">ID Converter</a></li>
                                 </ul>
                             </li>
